修改协作者操作
